--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -37,5 +39,5 @@
   "devDependencies": {
     "gh-pages": "^3.1.0"
   },
-  "homepage": "http://pamaxa-s3.github.io/repository"
+  "homepage": "http://pamaxa-s3.github.io/react_warrior"
 }
